Fix remaining lint issues and enable Checkstyle.