@@ -25,10 +25,21 @@
 
 package com.sun.openjfx.tools.packager.linux;
 
+import java.io.File;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.nio.file.Paths;
+import java.text.MessageFormat;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Map;
+
+import com.sun.openjfx.tools.packager.AbstractAppImageBuilder;
 import com.sun.openjfx.tools.packager.AbstractImageBundler;
 import com.sun.openjfx.tools.packager.BundlerParamInfo;
 import com.sun.openjfx.tools.packager.ConfigException;
 import com.sun.openjfx.tools.packager.IOUtils;
+import com.sun.openjfx.tools.packager.JLinkBundlerHelper;
 import com.sun.openjfx.tools.packager.JreUtils;
 import com.sun.openjfx.tools.packager.JreUtils.Rule;
 import com.sun.openjfx.tools.packager.Log;
@@ -38,20 +49,21 @@ import com.sun.openjfx.tools.packager.StandardBundlerParam;
 import com.sun.openjfx.tools.packager.UnsupportedPlatformException;
 import com.sun.openjfx.tools.packager.bundlers.BundleParams;
 
-import com.sun.openjfx.tools.packager.JLinkBundlerHelper;
-
-import java.io.File;
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.file.Paths;
-import java.text.MessageFormat;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Map;
-
-import static com.sun.openjfx.tools.packager.StandardBundlerParam.*;
-import com.sun.openjfx.tools.packager.AbstractAppImageBuilder;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.APP_FS_NAME;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.APP_NAME;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.APP_RESOURCES;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.ARGUMENTS;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.CLASSPATH;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.ICON;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.JVM_OPTIONS;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.JVM_PROPERTIES;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.MAIN_CLASS;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.MAIN_JAR;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.MODULE;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.PREFERENCES_ID;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.PRELOADER_CLASS;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.USER_JVM_OPTIONS;
+import static com.sun.openjfx.tools.packager.StandardBundlerParam.VERSION;
 
 public class LinuxAppBundler extends AbstractImageBundler {
 
@@ -64,74 +76,75 @@ public class LinuxAppBundler extends AbstractImageBundler {
             "Icon for the application, in PNG format.",
             "icon.png",
             File.class,
-            params -> {
-                File f = ICON.fetchFrom(params);
-                if (f != null && !f.getName().toLowerCase().endsWith(".png")) {
-                    Log.info(MessageFormat.format("The specified icon \"{0}\" is not a PNG file and will not be used.  The default icon will be used in it's place.", f));
-                    return null;
-                }
-                return f;
-            },
-            (s, p) -> new File(s));
+        params -> {
+            File f = ICON.fetchFrom(params);
+            if (f != null && !f.getName().toLowerCase().endsWith(".png")) {
+                Log.info(MessageFormat.format("The specified icon \"{0}\" is not a PNG file and will not be used. " +
+                        "The default icon will be used in it's place.", f));
+                return null;
+            }
+            return f;
+        },
+        (s, p) -> new File(s));
 
     public static final BundlerParamInfo<URL> RAW_EXECUTABLE_URL = new StandardBundlerParam<>(
             "Launcher URL",
             "Override the packager default launcher with a custom launcher.",
             "linux.launcher.url",
             URL.class,
-            params -> {
-                try {
-                    return Paths.get("./build/generated-resources/com/sun/openjfx/tools/packager/linux/" + EXECUTABLE_NAME).toUri().toURL();
-                } catch (MalformedURLException e) {
-                    Log.info(e.toString());
-                    return null;
-                }
-            },
-            (s, p) -> {
-                try {
-                    return new URL(s);
-                } catch (MalformedURLException e) {
-                    Log.info(e.toString());
-                    return null;
-                }
-            });
+        params -> {
+            try {
+                return Paths.get("./build/generated-resources/com/sun/openjfx/tools/packager/linux/" +
+                        EXECUTABLE_NAME).toUri().toURL();
+            } catch (MalformedURLException e) {
+                Log.info(e.toString());
+                return null;
+            }
+        },
+        (s, p) -> {
+            try {
+                return new URL(s);
+            } catch (MalformedURLException e) {
+                Log.info(e.toString());
+                return null;
+            }
+        });
 
-    //Subsetting of JRE is restricted.
-    //JRE README defines what is allowed to strip:
-    //   http://www.oracle.com/technetwork/java/javase/jre-8-readme-2095710.html
-    //
+    // Subsetting of JRE is restricted.
+    // JRE README defines what is allowed to strip:
+    //  http://www.oracle.com/technetwork/java/javase/jre-8-readme-2095710.html
     public static final BundlerParamInfo<Rule[]> LINUX_JRE_RULES = new StandardBundlerParam<>(
             "",
             "",
             ".linux.runtime.rules",
             Rule[].class,
-            params -> new Rule[]{
-                    Rule.prefixNeg("/bin"),
-                    Rule.prefixNeg("/plugin"),
-                    //Rule.prefixNeg("/lib/ext"), //need some of jars there for https to work
-                    Rule.suffix("deploy.jar"), //take deploy.jar
-                    Rule.prefixNeg("/lib/deploy"),
-                    Rule.prefixNeg("/lib/desktop"),
-                    Rule.substrNeg("libnpjp2.so")
-            },
-            (s, p) ->  null);
+        params -> new Rule[]{
+                Rule.prefixNeg("/bin"),
+                Rule.prefixNeg("/plugin"),
+                //Rule.prefixNeg("/lib/ext"), //need some of jars there for https to work
+                Rule.suffix("deploy.jar"), //take deploy.jar
+                Rule.prefixNeg("/lib/deploy"),
+                Rule.prefixNeg("/lib/desktop"),
+                Rule.substrNeg("libnpjp2.so")
+        },
+        (s, p) ->  null);
 
     public static final BundlerParamInfo<RelativeFileSet> LINUX_RUNTIME = new StandardBundlerParam<>(
             "JRE",
-            "The Java Runtime to co-bundle. The default value is the current JRE running the bundler. A value of " +
-                    "null will cause no JRE to be co-bundled and the system JRE will be used to launch the application.",
+            "The Java Runtime to co-bundle. The default value is the current JRE running the bundler. A value of null" +
+                    " will cause no JRE to be co-bundled and the system JRE will be used to launch the application.",
             BundleParams.PARAM_RUNTIME,
             RelativeFileSet.class,
-            params -> JreUtils.extractJreAsRelativeFileSet(System.getProperty("java.home"),
-                    LINUX_JRE_RULES.fetchFrom(params)),
-            (s, p) -> JreUtils.extractJreAsRelativeFileSet(s, LINUX_JRE_RULES.fetchFrom(p))
-    );
+        params -> JreUtils.extractJreAsRelativeFileSet(System.getProperty("java.home"),
+                LINUX_JRE_RULES.fetchFrom(params)),
+        (s, p) -> JreUtils.extractJreAsRelativeFileSet(s, LINUX_JRE_RULES.fetchFrom(p)));
 
     @Override
     public boolean validate(Map<String, ? super Object> p) throws UnsupportedPlatformException, ConfigException {
         try {
-            if (p == null) throw new ConfigException("Parameters map is null.",
-                    "Pass in a non-null parameters map.");
+            if (p == null) {
+                throw new ConfigException("Parameters map is null.", "Pass in a non-null parameters map.");
+            }
             return doValidate(p);
         } catch (RuntimeException re) {
             if (re.getCause() instanceof ConfigException) {
@@ -205,12 +218,8 @@ public class LinuxAppBundler extends AbstractImageBundler {
             JLinkBundlerHelper.execute(p, appBuilder);
 
             return rootDirectory;
-        } catch (IOException ex) {
-            Log.info("Exception: "+ex);
-            Log.debug(ex);
-            return null;
         } catch (Exception ex) {
-            Log.info("Exception: "+ex);
+            Log.info("Exception: " + ex);
             Log.debug(ex);
             return null;
         }
@@ -223,7 +232,8 @@ public class LinuxAppBundler extends AbstractImageBundler {
 
     @Override
     public String getDescription() {
-        return "A Directory based image of a linux Application with an optionally co-bundled JRE.  Used as a base for the Installer bundlers.";
+        return "A Directory based image of a linux Application with an optionally co-bundled JRE. " +
+                "Used as a base for the Installer bundlers.";
     }
 
     @Override
@@ -242,9 +252,7 @@ public class LinuxAppBundler extends AbstractImageBundler {
     }
 
     public static Collection<BundlerParamInfo<?>> getAppBundleParameters() {
-        return Arrays.asList(
-                // ADD_MODULES,
-                APP_NAME,
+        return Arrays.asList(APP_NAME,
                 APP_RESOURCES,
                 // APP_RESOURCES_LIST, // ??
                 ARGUMENTS,
@@ -258,8 +266,7 @@ public class LinuxAppBundler extends AbstractImageBundler {
                 PREFERENCES_ID,
                 PRELOADER_CLASS,
                 USER_JVM_OPTIONS,
-                VERSION
-        );
+                VERSION);
     }
 
     @Override
